fixing letter spacing

--- a/less/pages/buyers-guide/home.less
+++ b/less/pages/buyers-guide/home.less
@@ -191,7 +191,6 @@
     }
     p, a {
       font-family: 'Open Sans', sans-serif;
-      letter-spacing: 1.5px;
     }
     p.playfair, p.playfair a {
       font-family: 'Playfair Display', serif;
@@ -232,9 +231,11 @@
         display: block;
         max-width: 500px;
         margin: auto;
+        letter-spacing: 0;
 
         a {
           color: #000;
+          letter-spacing: 0;
         }
       }
     }
